[Notifications] Fix swipe to close for ARC notifications.

Change ArcCustomNotificationView::EventForwarder to not directly invoke On*Event methods of ArcCustomNotificationView (which then call up to the parent). Instead, re-dispatch them to the containing widget, which should handle the event propagation, letting SlideOutController get events as it should. A consequence of this is that I had to add a delegate method to SlideOutController to update ArcCustomNotificationView::SlideHelper. This is because ArcCustomNotificationView will no longer get the gesture events, since it is no longer being called directly from EventForwarder.

BUG=719407

Review-Url: https://codereview.chromium.org/2873553002
Cr-Commit-Position: refs/heads/master@{#473094}

Former-commit-id: 870290f623b47e436d231e354c84b8723bb7000a