ui/message_center/views/message_view.h
@@ -72,6 +72,7 @@ class MESSAGE_CENTER_EXPORT MessageView
 
   // views::SlideOutController::Delegate
   ui::Layer* GetSlideOutLayer() override;
+  void OnSlideChanged() override;
   void OnSlideOut() override;
 
   void set_scroller(views::ScrollView* scroller) { scroller_ = scroller; }
